--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 html, body{
   font-size:1em;
   color: black;
-  background-color: #edf5ff;
+  background-color: #3FBFBF;
   overflow-y: auto;
 }
 
